<resources>
    <string name="app_name">M_Feelm</string>
    <string name="MENU1">나의 필름</string>
    <string name="MENU2">검색</string>
    <string name="MENU3">통계</string>
    <string name="MENU4">피드</string>
    <string name="todo">TODO</string>

    <string name="signup">회원가입</string>
    <string name="success_signup">회원가입 성공</string>
    <string name="failed_signup">회원가입 실패</string>
    <string name="director">director</string>
    <string name="actor">actor</string>
    <string name="review_comment">관람하신 영화, 어떠셨나요?\n평점과 리뷰를 남겨주세요.</string>
    <string name="myRating">나의 별점</string>
    <string name="MyReview">나의 리뷰</string>
    <string name="free">자유롭게 작성해주세요.</string>
    <string name="Date">관람 날짜</string>
    <string name="complete">완료</string>
    <string name="MyRanking">나의 영화 순위</string>
    <string name="name">Name</string>
    <string name="ShareReview">리뷰 공개 여부</string>
    <string name="SelectDate">날짜 선택</string>
    <string name="noimage">NoImage</string>
    <string name="title">title</string>
    <string name="pubdata">pubData</string>
    <string name="InputSearch">검색어를 입력하세요</string>
    <string name="Search">검색</string>
    <string name="textview">TextView</string>
    <string name="myTotalTime">나의 총 관람시간</string>
    <string name="genreChart">관람 영화 장르별</string>

</resources>
