<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/moviePoster"
                android:layout_width="145dp"
                android:layout_height="200dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/feelm" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:text="@string/textview"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    android:stepSize="0.5" />
                <!--                android:style="@style/Widget.AppCompat.RatingBar.Small" -->

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/pubDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/pubdata"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/director"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/actor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/actor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/review_comment"
            android:textColor="#0C0C0C"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/com1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/myRating"
            android:textColor="#000000"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/my_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:max="5"
            android:numStars="5"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/com2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/MyReview"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Myreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/free"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/com3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/Date"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/watchDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:text="@string/name"
            android:clickable="true"
            android:focusable="false"
            android:autofillHints="" />

        <Switch
            android:id="@+id/reviewShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ShareReview" />

        <Button
            android:id="@+id/complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:bufferType="normal"
            android:text="@string/complete" />

    </LinearLayout>
</ScrollView>


    <!--        android:style="@style/Widget.AppCompat.RatingBar.Indicator" -->

