<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="15dp"
    android:paddingTop="15dp">
    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:contentDescription="@string/noimage"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_pub_data"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:text="@string/pubdata" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">

            <RatingBar
                android:id="@+id/rb_user_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:isIndicator="false"
                android:max="1"
                android:numStars="1"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/user_rating_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:text="@string/textview"
                android:textColor="#FF5D18"
                android:paddingEnd="0dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
